[gd_scene load_steps=7 format=3 uid="uid://ducr2aum6knmf"]

[ext_resource type="Script" path="res://entities/plane/plane.gd" id="1_nj7pc"]
[ext_resource type="PackedScene" uid="uid://byk8xdsw26qb6" path="res://scenes/animation_manager.tscn" id="2_osdub"]
[ext_resource type="PackedScene" uid="uid://bk2ta1wj1xsh7" path="res://scenes/flight_manager.tscn" id="3_jkkr4"]

[sub_resource type="CircleShape2D" id="CircleShape2D_snjd4"]
radius = 700.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ghyjh"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_cuht3"]
radius = 50.0

[node name="Plane" type="CharacterBody2D" groups=["killable_by_loop"]]
script = ExtResource("1_nj7pc")

[node name="AnimationManager" parent="." instance=ExtResource("2_osdub")]
scale = Vector2(2, 2)
sprite_name = "plane"

[node name="DetectionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
shape = SubResource("CircleShape2D_snjd4")

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_ghyjh")

[node name="FlightManager" parent="." instance=ExtResource("3_jkkr4")]
speed = 700.0
rotation_speed = 1.5

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_cuht3")

[connection signal="body_entered" from="DetectionRadius" to="." method="_on_body_enters_detection_radius"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
